# app_location_backend

./: .gitignore  backend.code-workspace  pyproject.toml
core/abstractions/: redis_abs.py
core/exceptions/: handler_exception.py  mapping_exception.py  reponse_exception.py
core/middlewares/: __init__.py
docker/: docker-compose.yml  redis-docker-compose.yml
services/user_service/: pyproject.toml  run_app.py
services/user_service/celery_worker/: __init__.py  celery_app.py  worker.py
services/user_service/celery_worker/tasks/: __init__.py  task.py  task_app.py
services/user_service/envs/: .env  shared.env
services/user_service/scripts/: run_app.sh  run_celery_worker.sh
services/user_service/settings/: config.py
services/user_service/src/: __init__.py  celery_app.py  main.py
services/user_service/src/database/mongodb/mixins/: mongodb_mixins.py
services/user_service/src/tools/: generator_token.py
services/user_service/src/user/: task.py
services/user_service/src/user/db_login/: __init__.py
services/user_service/src/user/db_login/schema/: db_login.py
services/user_service/src/user/db_login/utils/: db_login.py
services/user_service/src/user/db_login/views/: __init__.py  db_login.py
services/user_service/src/user/models/: user_models.py
services/user_service/src/user/sso/: __init__.py
services/user_service/src/user/sso/sso_facebook/views/: __init__.py  login.py
services/user_service/src/user/sso/sso_gmail/views/: __init__.py  login.py
services/user_service/tests/: test_user_service.py
tests/: test_back_end.py
(+6 files in other folders)
