[tool.poetry]
name = "user_service"
version = "0.1.0"
description = ""
authors = ["ng14th <thnguyen.github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = {extras = ["async"], version = "^2.3.2"}
umongo = "^3.1.0"
motor = "^3.2.0"
python-dotenv = "^1.0.0"
pydantic = "1.8.2"
marshmallow = "^3.20.1"
Flask-Middleware = "^1.0"
Flask-Cors = "^4.0.0"
Flask-Limiter = "^3.3.1"
jwt = "^1.3.1"
bcrypt = "^4.0.1"
celery = "5.2.7"
kombu = "^5.3.1"
requests = "^2.31.0"
redis = "^4.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
